[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-gateway"
version = "0.1.0"
description = "WebSocket coordination hub: handler registry, job cache, event broadcast, client"
authors = [{ name = "Shawn Knight" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
websockets = ["websockets>=14.0,<17"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21", "websockets>=14.0,<17"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-gateway"
Repository = "https://github.com/Masterplanner25/nodus-gateway"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
